[tool.poetry]
name = "helpjuice"
version = "3.0.2"
description = "Python Helpjuice API Wrapper."
license = "GPL-3.0-or-later"
authors = ["Sam Morgan <sam@samamorgan.com>"]
readme = "README.md"
repository = "https://github.com/samamorgan/helpjuice"
documentation = "https://helpjuice.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/python-poetry/poetry/issues"
"Funding" = "https://github.com/sponsors/samamorgan"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
importlib-metadata = "^5.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
responses = "^0.22.0"


[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2.3"
myst-parser = "^0.18.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
